attempting to fix font size to prevent overflow

--- a/style.css
+++ b/style.css
@@ -167,16 +167,16 @@ footer h3{
 
 @media (max-width: 768px) {
 	.landing-text h1 {
-		font-size: 700%;
+		font-size: 600%;
 	}
 	.landing-text h2 {
-		font-size: 250%;
+		font-size: 230%;
 	}
 	.fa {
 		font-size: 100%;
 		padding: 10px;
 	}
 	#resume_landing h1 {
-	font-size: 300%;
+	font-size: 250%;
 	}
 }
